# django-production-setup

./: .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  script.ps1
.devcontainer/: devcontainer.json
apps/accounts/: admin.py  models.py
apps/accounts/serializers/: accounts_v1.py
apps/accounts/services/: __init__.py  tokens.py
apps/accounts/urls/: urls_v1.py
apps/accounts/views/: views_v1.py
auth_users/: admin.py  apps.py  forms.py  manager.py  models.py
auth_users/migrations/: 0001_initial.py
core/: env.py  urls.py
core/settings/django/: base.py
core/settings/plugins/: cors.py  drf.py  drf_spectacular.py  jwt.py
